force-app/main/default/objects/AEQCC_Performance__c/AEQCC_Performance__c.object-meta.xml
<CustomObject>
    <description>AEQCC Performance</description>
    <label>AMEX Performance</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AMEX Performance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>