force-app/main/default/objects/AEQCC_Performance__c/fields/Revenue_includes_Amex_Proprietary_Cards__c.field-meta.xml
<CustomField>
    <fullName>Revenue_includes_Amex_Proprietary_Cards__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revenue includes Amex Proprietary Cards</label>
    <type>Checkbox</type>
</CustomField>