force-app/main/default/objects/AEQCC_Performance__c/fields/Rollup__c.field-meta.xml
<CustomField>
    <fullName>Rollup__c</fullName>
    <label>Rollup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TY</fullName>
            </value>
            <value>
                <fullName>LY</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>