force-app/main/default/objects/AEQCC_Performance__c/fields/YTD_Co_Brand_CV__c.field-meta.xml
<CustomField>
    <fullName>YTD_Co_Brand_CV__c</fullName>
    <label>YTD Co-Brand CV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>