force-app/main/default/objects/AEQCC_Performance__c/fields/YTD_Other_Airlines_Dom_CV__c.field-meta.xml
<CustomField>
    <fullName>YTD_Other_Airlines_Dom_CV__c</fullName>
    <inlineHelpText>Other Carrier Domestic Expenditure CYTD</inlineHelpText>
    <label>YTD Other Airlines Dom CV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>