force-app/main/default/objects/AEQCC_Performance__c/fields/YTD_Qantas_CV__c.field-meta.xml
<CustomField>
    <fullName>YTD_Qantas_CV__c</fullName>
    <inlineHelpText>QF Expenditure CYTD</inlineHelpText>
    <label>YTD Qantas CV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>