force-app/main/default/objects/AEQCC_Performance__c/fields/YTD_QF_Dom_CV__c.field-meta.xml
<CustomField>
    <fullName>YTD_QF_Dom_CV__c</fullName>
    <inlineHelpText>QF Domestic Expenditure CYTD</inlineHelpText>
    <label>YTD QF Dom CV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>