force-app/main/default/objects/AEQCC_Performance__c/fields/YTD_QF_Dom_MS__c.field-meta.xml
<CustomField>
    <fullName>YTD_QF_Dom_MS__c</fullName>
    <formula>IF (YTD_Total_Domestic__c != 0, YTD_QF_Dom_CV__c  /  YTD_Total_Domestic__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Qantas Domestic Market Share CYTD</inlineHelpText>
    <label>YTD QF Dom MS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>