force-app/main/default/objects/AEQCC_Performance__c/fields/YTD_QF_Intl_MS__c.field-meta.xml
<CustomField>
    <fullName>YTD_QF_Intl_MS__c</fullName>
    <formula>IF(YTD_Total_International__c != 0, YTD_QF_Intl_CV__c  /  YTD_Total_International__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Qantas International Market Share CYTD</inlineHelpText>
    <label>YTD QF Intl MS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>