force-app/main/default/objects/AEQCC_Performance__c/fields/YTD_Total_Air__c.field-meta.xml
<CustomField>
    <fullName>YTD_Total_Air__c</fullName>
    <formula>YTD_Qantas_CV__c  +  YTD_Other_Airlines_CV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Air Travel Expenditure CYTD</inlineHelpText>
    <label>YTD Total Air</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>