force-app/main/default/objects/AEQCC_Performance__c/fields/YTD_Total_Domestic__c.field-meta.xml
<CustomField>
    <fullName>YTD_Total_Domestic__c</fullName>
    <formula>YTD_QF_Dom_CV__c  +  YTD_Other_Airlines_Dom_CV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Domestic Expenditure CYTD</inlineHelpText>
    <label>YTD Total Domestic</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>