force-app/main/default/objects/AEQCC_Performance__c/recordTypes/X2015.recordType-meta.xml
<RecordType>
    <fullName>X2015</fullName>
    <active>true</active>
    <description>2015</description>
    <label>2015</label>
</RecordType>