force-app/main/default/objects/AEQCC_Performance__c/recordTypes/X2016.recordType-meta.xml
<RecordType>
    <fullName>X2016</fullName>
    <active>true</active>
    <description>2016</description>
    <label>2016</label>
</RecordType>