force-app/main/default/objects/AEQCC_Performance__c/recordTypes/X2017.recordType-meta.xml
<RecordType>
    <fullName>X2017</fullName>
    <active>true</active>
    <description>2017</description>
    <label>2017</label>
</RecordType>