force-app/main/default/objects/AEQCC_Performance__c/recordTypes/X2018.recordType-meta.xml
<RecordType>
    <fullName>X2018</fullName>
    <active>true</active>
    <description>2018</description>
    <label>2018</label>
</RecordType>