force-app/main/default/objects/AEQCC_Performance__c/recordTypes/X2019.recordType-meta.xml
<RecordType>
    <fullName>X2019</fullName>
    <active>true</active>
    <description>2019</description>
    <label>2019</label>
</RecordType>