force-app/main/default/objects/AEQCC_Performance__c/recordTypes/X2020.recordType-meta.xml
<RecordType>
    <fullName>X2020</fullName>
    <active>true</active>
    <description>2020</description>
    <label>2020</label>
</RecordType>